Fixed z-index for dialogs, added click_close option that does not work with exprDialogs because they are framed

--- a/libsrc/scss/dialogs.scss
+++ b/libsrc/scss/dialogs.scss
@@ -13,7 +13,7 @@
   position:fixed;
   width:100%;
   height:100%;
-  z-index:2;
+  z-index:4;
   top: 0;
 }
 #dialog_shield.fade { background-color:black; opacity:0.6; }
